force-app/main/default/objects/Action_Plan__c/Action_Plan__c.object-meta.xml
<CustomObject>
    <label>Action Plan</label>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Action Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>