force-app/main/default/objects/Action_Plan__c/fields/Action_Step__c.field-meta.xml
<CustomField>
    <fullName>Action_Step__c</fullName>
    <label>Action Step</label>
    <length>100</length>
    <type>Text</type>
</CustomField>