force-app/main/default/objects/Action_Plan__c/fields/Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1__c</fullName>
    <label>Custom Field 1</label>
    <length>150</length>
    <type>Text</type>
</CustomField>