force-app/main/default/objects/Action_Plan__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <formula>Metric_Skill__r.Description__c</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>