force-app/main/default/objects/Action_Plan__c/fields/Measurement_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Criteria__c</fullName>
    <label>Measurement Criteria</label>
    <type>TextArea</type>
</CustomField>